增加storybook 修改文档

--- a/stories/Introduction.stories.mdx
+++ b/stories/Introduction.stories.mdx
@@ -1,4 +1,14 @@
+import { Meta } from '@storybook/addon-docs';
+
+<Meta title="介绍" />
+
 # formly-lowcode
+
+`formly-lowcode`是一个基于`angular`开发的低代码设计器组件库。使用`ng-zorro-antd` UI库构建界面。全部代码开源并遵循 `MIT` 协议，任何企业、组织及个人均可免费使用。
+
+![License](https://img.shields.io/badge/License-MIT-blue.svg)
+[![Angular](https://img.shields.io/badge/Build%20with-Angular%20CLI-red?logo=angular)](https://www.github.com/angular/angular)
+[![Storybook](https://cdn.jsdelivr.net/gh/storybookjs/brand@main/badge/badge-storybook.svg)](https://m310851010.github.io/formly-lowcode)
 
 
 ## 🖥使用环境
@@ -87,4 +97,6 @@ export class AppComponent implements OnInit {
 
 ## 👍支持
 
-为该项目点个免费的星⭐
+<div className="doc-tip-wrapper">
+  <span className="doc-tip">提示</span> 为该项目点个免费的星⭐
+</div>
